--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "styles/classes.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "styles/classes.js", "lib/mongodb.js"],
   "exclude": ["node_modules"]
 }
