--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.2",
+    "cloudinary": "^1.34.0",
     "mongodb": "^5.0.1",
     "next": "13.1.2",
     "react": "18.2.0",
